--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ pyautogui~=0.9.53
 webdriver_manager
 PyYAML~=6.0
 validate_email
-langchain~=0.0.175
+langchain
+langchain-community
 Levenshtein~=0.21.0
